# rp2040-space-truck

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
svd_files/: RP2040.svd
